<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E4E3E3"
    tools:context=".ui.SettingFragment">

    <include
        android:id="@+id/tbSetting"
        layout="@layout/setting_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/llSettings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/light_blue"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbSetting">

        <!-- Base CardView -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cvFirst"
            style="@style/Base.CardView"
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="5dp"
            app:cardCornerRadius="18dp">

            <!-- This is a ConstraintLayout for the entire CardView including the expandable portion -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white">

                <!-- This is a ConstraintLayout for the fixed portion of the CardView. The elements that
            lie within the fixed portion of the CardView can be constrained to this layout -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnExpand"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/white"
                    android:text="@string/first_expandable"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:textAlignment="textStart"
                    app:icon="@drawable/notification_icon"
                    app:iconGravity="end"
                    app:iconPadding="20dp"
                    app:iconTint="@color/dark_blue"
                    app:layout_constraintBottom_toTopOf="@+id/hidden_view"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="RtlCompat" />

                <!-- The following is the expandable portion whose visibility is initially set to 'gone'
            The parent LinearLayout contains 3 child LinearLayouts that hold a subject name and an icon each -->
                <LinearLayout
                    android:id="@+id/hidden_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnExpand">

                    <!-- Child LinearLayout 1 -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="end"
                        android:orientation="horizontal"
                        android:padding="8dp">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnMorningNotify"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:backgroundTint="@color/light_blue"
                            android:contentDescription="@string/morning"
                            android:textColor="@color/orange"
                            app:cornerRadius="15dp" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="3"
                            android:text="@string/morningNotification"
                            android:textColor="#000000"
                            android:textSize="20sp" />

                        <CheckBox
                            android:id="@+id/cbMorningNotify"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_gravity="center"/>
                    </LinearLayout>

                    <!-- Child LinearLayout 2 -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="end"
                        android:orientation="horizontal"
                        android:padding="8dp">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnNightNotify"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:backgroundTint="@color/light_blue"
                            android:contentDescription="@string/night"
                            android:textColor="@color/orange"
                            app:cornerRadius="15dp" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="3"
                            android:text="@string/nightNotification"
                            android:textColor="#000000"
                            android:textSize="20sp" />

                        <CheckBox
                            android:id="@+id/cbNightNotify"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_gravity="center"/>
                    </LinearLayout>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
